function call solved

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <p aria-colcount="text-2xl text-center">Area:<span id="triangle-areadisplay">-----</span>cm<sup>2</sup></p>
-            <button onclick="calculateARea()" class="button block bg-[green] w-[100%] py-4 rounded-lg mt-2">calculate</button>
+            <button onclick="triangleCalculateARea()" class="button block bg-[green] w-[100%] py-4 rounded-lg mt-2">calculate</button>
         </div>
 
         <div class="p-5">
@@ -52,7 +52,7 @@
             </div>
             <p aria-colcount="text-2xl text-center">Area:<span id="rectangle-areadisplay">-----</span>cm<sup>2</sup></p>
 
-            <button onclick="calculateARea()" class="button block bg-[green] w-[100%] py-4 rounded-lg mt-2">calculate</button>
+            <button onclick="rectangleCalculateARea()" class="button block bg-[green] w-[100%] py-4 rounded-lg mt-2">calculate</button>
         </div>
 
         <div class="p-5">
